--- a/anfisa/templates/posts/group_list.html
+++ b/anfisa/templates/posts/group_list.html
@@ -1,6 +1,5 @@
 {%extends "base.html" %}
 
-    
     {%block title%}
     <title>Что_то грустноее</title>
     {% endblock %}
@@ -21,7 +20,7 @@
             <li>
               Дата публикации: 30 июля 1854
             </li>
-          </ul>      
+          </ul>
           <p>
             [Рымник.] Сдѣлалъ верхомъ переходъ до Рымника. [[5]] Старикъ все не кланяется мнѣ.
             Обѣ вещи эти злятъ меня. Съ встрѣчавшимися баши-бузуками велъ себя хорошо. 
@@ -73,6 +72,14 @@
             днемъ своимъ очень доволенъ. (1)
           </p>
         </article>
+        <h1>Сообщество: {{ group.title }}</h1>
+        <p>{{ group.description }}</p>
+
+        {% if post.group %}
+          <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+        {% endif %}
+        {% if not forloop.last %}<hr>{% endif %}
+
         <!-- под последним постом нет линии -->
       </div>
       {% endblock %}
