--- a/anfisa/templates/about/tech.html
+++ b/anfisa/templates/about/tech.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Технологии{% endblock %}
+{% block title %} <title>Технологии</title> {% endblock %}
 {% block content %}
 {% comment %} Колонки с отступом сверху и снизу {% endcomment %}
 <div class="row">
