--- a/anfisa/templates/posts/post_detail.html
+++ b/anfisa/templates/posts/post_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Пост {{ post.text|truncatechars:30 }}{% endblock %}
+{% block title %}<title>Пост {{ post.text|truncatechars:30 }}</title>{% endblock %}
 
 {% block content %}
 <main>
@@ -19,7 +19,7 @@
         </li>
         {% endif %}
         <li class="list-group-item">
-          Автор: {{ post.author.get_full_name }}
+          Автор: {{ post.author }}
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
           Всего постов автора: <span>{{ post.author.posts.count }}</span>
