--- a/anfisa/templates/posts/create_post.html
+++ b/anfisa/templates/posts/create_post.html
@@ -2,7 +2,7 @@
 
 {% block title %}
   {% if is_edit %}
-    Сохранить запись
+    <title>Сохранить запись</title>
   {% else %}
     <title>Новая запись</title>
   {% endif %}
