--- a/anfisa/templates/posts/index.html
+++ b/anfisa/templates/posts/index.html
@@ -1,5 +1,5 @@
 {%extends "base.html" %}
-    
+{% load thumbnail %}
     {%block title%}
     <title>Что_то грустноее</title>
     {% endblock %}
@@ -70,17 +70,26 @@
             Гембичомъ, потомъ болталъ съ Шубинымъ и съ Сашей Горчаковымъ. — Исключая праздности, 
             днемъ своимъ очень доволенъ. (1)
           </p>
-          <a href={% url 'posts:group_list' %}>
-            все записи группы</a>
+
         </article>
         <!-- под последним постом нет линии -->
         {% for post in page_obj %}
-        <h2>{{ post.title }}</h2>
-        <p>{{ post.text }}</p>
-        <p><small>Автор: {{ post.author }} | Дата: {{ post.pub_date }}</small></p>
+          <p><small>Автор: {{ post.author }} | Дата: {{ post.pub_date }}</small></p>
+          <h2>{{ post.title }}</h2>
+          <p>{{ post.text }}</p>
+          {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+            <img class="card-img my-2" src="{{ im.url }}">
+          {% endthumbnail %}
+        {% if post.group and post.group.slug %}
+          <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+        {% endif %}
+          <p><a href="{% url 'posts:post_detail' post.id %}">подробная информация</a></p>
+
+        <hr>
+          <!-- Добавьте горизонтальную линию между постами -->
       {% endfor %}
-    
       {% include 'includes/paginator.html' %}
+
       </div>
 
     <!-- Использованы классы бустрапа: -->
