--- a/anfisa/templates/posts/profile.html
+++ b/anfisa/templates/posts/profile.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load thumbnail %}
 {% block title %}Профайл пользователя {{ author.username }}{% endblock %}
 
 {% block content %}
@@ -18,6 +18,9 @@
             Дата публикации: {{ post.pub_date|date:"d E Y" }}
           </li>
         </ul>
+        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+        <img class="card-img my-2" src="{{ im.url }}">
+      {% endthumbnail %}
         <p>{{ post.text|truncatewords:30 }}</p>
         <a href="{% url 'posts:post_detail' post.id %}">подробная информация</a>
       </article>
