--- a/anfisa/templates/posts/index.html
+++ b/anfisa/templates/posts/index.html
@@ -4,6 +4,7 @@
     <title>Что_то грустноее</title>
     {% endblock %}
       {%block content%}
+      {% include 'includes/switcher.html' %}
 
       <!-- класс py-5 создает отступы сверху и снизу блока -->
       <div class="container py-5">
