--- a/anfisa/templates/posts/profile.html
+++ b/anfisa/templates/posts/profile.html
@@ -1,11 +1,29 @@
 {% extends "base.html" %}
 {% load thumbnail %}
-{% block title %}Профайл пользователя {{ author.username }}{% endblock %}
+{% block title %}<title>Профайл пользователя</title> {{ author.username }}{% endblock %}
 
 {% block content %}
+<div class="mb-5">
   <div class="container py-5">
     <h1>Все посты пользователя {{ author.username }}</h1>
     <h3>Всего постов: {{ post_count }}</h3>
+    {% if following %}
+      <a
+        class="btn btn-lg btn-light"
+        href="{% url 'posts:profile_unfollow' author.username %}" role="button"
+      >
+        Отписаться
+      </a>
+    {% else %}
+      <a
+        class="btn btn-lg btn-primary"
+        href="{% url 'posts:profile_follow' author.username %}" role="button"
+      >
+        Подписаться
+      </a>
+    {% endif %}
+    </div>
+</div>
 
     {% for post in posts %}
       <article>
